--- a/ExViewer/Themes/GenericOverride.xaml
+++ b/ExViewer/Themes/GenericOverride.xaml
@@ -372,7 +372,8 @@
         <Setter Property="TopIndicatorTemplate">
             <Setter.Value>
                 <DataTemplate>
-                    <ptr:PullRefreshProgressControl Progress="{Binding}"
+                    <ptr:PullRefreshProgressControl x:Uid="PullRefreshProgressControl"
+                                                    Progress="{Binding}"
                                                     PullToRefreshText="Pull to refresh"
                                                     ReleaseToRefreshText="Release to refresh" />
                 </DataTemplate>
