--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -100,7 +100,8 @@
                                     Text="{x:Bind userInfo.DisplayName, FallbackValue=Guest}"
                                     HorizontalAlignment="Center"
                                     VerticalAlignment="Center" />
-                        <Button Grid.Row="2"
+                        <Button x:Uid="RootControlChangeUserButton"
+                                Grid.Row="2"
                                 Grid.Column="2"
                                 x:Name="btn_ChangeUser"
                                 Content="&#xE895;"
@@ -114,7 +115,8 @@
                             <ListView.Transitions>
                                 <TransitionCollection />
                             </ListView.Transitions>
-                            <controls:SplitViewTab x:Name="svt_Search"
+                            <controls:SplitViewTab x:Uid="RootControlSearchSplitViewTab"
+                                                   x:Name="svt_Search"
                                                    Content="Search"
                                                    Click="svt_Click">
                                 <controls:SplitViewTab.Icon>
@@ -122,7 +124,8 @@
                                               FontSize="16" />
                                 </controls:SplitViewTab.Icon>
                             </controls:SplitViewTab>
-                            <controls:SplitViewTab x:Name="svt_Cache"
+                            <controls:SplitViewTab x:Uid="RootControlCacheSplitViewTab"
+                                                   x:Name="svt_Cache"
                                                    Content="Saved galleries"
                                                    Click="svt_Click">
                                 <controls:SplitViewTab.Icon>
@@ -130,7 +133,8 @@
                                               FontSize="16" />
                                 </controls:SplitViewTab.Icon>
                             </controls:SplitViewTab>
-                            <controls:SplitViewTab x:Name="svt_Settings"
+                            <controls:SplitViewTab x:Uid="RootControlSettingsSplitViewTab"
+                                                   x:Name="svt_Settings"
                                                    Content="Settings"
                                                    Click="svt_Click">
                                 <controls:SplitViewTab.Icon>
@@ -139,7 +143,8 @@
                                 </controls:SplitViewTab.Icon>
                             </controls:SplitViewTab>
                             <ListView.Footer>
-                                <controls:SplitViewTab x:Name="svt_About"
+                                <controls:SplitViewTab x:Uid="RootControlAboutSplitViewTab"
+                                                       x:Name="svt_About"
                                                        Content="About"
                                                        Click="svt_Click">
                                     <controls:SplitViewTab.Icon>
